# WPODNet-Pytorch

./: .gitignore  README.md  inference.py  predict.py  pyproject.toml  requirements.txt
.github/workflows/: cd.yaml  ci.yaml
model/: wpodnet.py
src/: backend.py  utils.py
tests/wpodnet/stream/: test_image_streamer.py
wpodnet/: __init__.py  backend.py  model.py  stream.py
