[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "wpodnet-pytorch"
dynamic = ["dependencies", "version"]
description = "The implementation of ECCV 2018 paper \"License Plate Detection and Recognition in Unconstrained Scenarios\" in PyTorch"
readme = "README.md"
requires-python = ">=3.7"
keywords = [
    "python",
    "ai",
    "computer-vision",
    "deep-learning",
    "torch",
    "object-detection",
    "license-plate-recognition",
    "wpod",
    "wpod-net",
]
authors = [{ name = "Pandede" }]
maintainers = [{ name = "Pandede" }]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Software Development",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Image Recognition",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
]

[tool.setuptools]
packages = { find = { where = ["."], include = ["wpodnet", "wpodnet.*"] } }

[tool.setuptools.dynamic]
dependencies = { file = "requirements.txt" }
version = { attr = "wpodnet.__version__" }

[project.optional-dependencies]
dev = [
    "pytest"
]

[project.urls]
"Source" = "https://github.com/Pandede/WPODNet-Pytorch"
